style.css
/* ------- GLOBAL ------- */
:root
{
    --text: #f0eff6;
    --text-secondary: #a5a5a5;
    --text-error: #ff6464;
    --text-warning: #db9811;
    --text-success: #48da11;
    --text-info: #5595f9;

    --background: #020203;
    --panel-background: #0b0b11;

    --primary: #36a6d6;
    --secondary: #262564;
    --accent: #2221a4;

    --error: #760909;
    --warning: #5d4109;
    --success: #1c5606;
    --info: #062556;
    --neutral: #414449;
}



/* ------- DEFAULTS ------- */
*
{
    box-sizing: border-box;
    margin: 0;
}

html, body
{
    min-height: 100vh;

    background-color: var(--background);
    
    color: var(--text);
    font-family: 'Quicksand', sans-serif;
}

h1, h2, h3, h4, h5, h6
{
    color: var(--text);
    font-family: 'Julius Sans One', sans-serif;
    font-weight: bold;
}

h1
{
    color: var(--primary);
    font-size: 5em;
}

a
{
    color: var(--text-info);
}



/* ------- CONTENT ------- */
.page
{
    padding: 5vw;
}

header
{
    text-align: center;
}


.catalog
{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
}

.resource
{
    margin: 10px;
    padding: 10px;
    border-radius: 10px;
    border: var(--accent) solid;
    border-width: 0px 2px 2px 2px;
    
    display: inline-block;
    
    background-image: linear-gradient(180deg, transparent, var(--panel-background));
}

.resource.need-check
{
    border-color: var(--warning);
}

.resource.need-check::after
{
    margin: 2px 5px;
    padding: 2px 4px;

    content: '/!\\ Needs checking';
    color: var(--text-warning);
}


.resource .name
{
    margin-bottom: 8px;

    display: flex;
    align-items: center;

    color: var(--text);
    font-family: 'Julius Sans One', sans-serif;
    font-weight: bold;
    font-size: 1.2em;
}

.resource .name::after
{
    width: 17px;
    height: 17px;

    margin-left: 5px;

    display: inline-block;

    background-color: var(--text);
    -webkit-mask-image: url('icons/output_FILL0_wght400_GRAD0_opsz24.svg'); /* these frigging don't work :( */
    mask-image: url('icons/output_FILL0_wght400_GRAD0_opsz24.svg');

    content: '';
}


.resource .desc-quick
{
    color: var(--text-secondary);
}

.resource .desc
{
    color: var(--text-secondary);
}


.resource .pricing-options
{
    margin: 5px 0;

    display: flex;
}

.resource .pricing
{
    margin: 2px 5px;
    padding: 2px 4px;

    border-radius: 4px;

    background-color: var(--neutral);
}

.resource .pricing.free
{
    background-color: var(--success);
}

.resource .pricing.special
{
    background-color: var(--warning);
}


.resource .features
{
    margin: 5px 0;

    display: flex;
    flex-direction: column;
    align-items: stretch;
}

.resource .feature
{
    display: flex;
    align-items: center;
}


.type
{
    margin: 2px 5px;
    padding: 2px 4px;
    border-radius: 4px;

    background-color: var(--neutral);

    font-weight: bold;
}



/* ------- LOG ------- */
.log
{
    padding: 5px;
}

.log.empty
{
    visibility: hidden;
}

.log-entry
{
    display: grid;
    grid-template: 'status message data';
    grid-template-columns: 30px auto 1fr;
    grid-column-gap: 20px;
    align-items: center;

    margin: 5px;
    padding: 5px;
    border-radius: 5px;

    background-color: var(--neutral);
}

.log-unknown, .log-redirect
{
    background-color: var(--warning);
}

.log-info
{
    background-color: var(--info);
}

.log-success
{
    background-color: var(--success);
}

.log-client, 
.log-server
{
    background-color: var(--error);
}

